--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -112,7 +112,68 @@
                     <div class="btn_sv mt-20">
                         <a href="#" class="main-menu d-lg-inline btn-orrange">Xem thêm</a>
                     </div>
-
+                    <div class="col-lg-8 row d-block d-md-none doctor-note">
+                        <article class="col-lg-4 wow fadeIn   animated" style="visibility: visible; animation-name: fadeIn;">
+                            <div class="border-radius-10 p-0 mb-30">
+                                <div class="post-thumb d-flex mb-15 border-radius-5 img-hover-scale">
+                                    <a href="single.html">
+                                        <img class="border-radius-5" src="/root/seo1.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="pl-10 pr-10">
+                                    <div class="post-title mb-10 text-limit-3-row">
+                                        <a href="#" class="text-c-3">10 Reasons to invest in SEO copywriting services</a>
+                                    </div>
+                                    <div class="">
+                                        <p class="post-exerpt text-c-2 text-limit-3-row">Agency life. We’ve all seen the photos posted on social media – the cool....</p>
+                                    </div>
+                                    <div>
+                                        <a href="single.html" class="read-more">Xem thêm</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="col-lg-4 wow fadeIn   animated" style="visibility: visible; animation-name: fadeIn;">
+                            <div class="border-radius-10 p-0 mb-30">
+                                <div class="post-thumb d-flex mb-15 border-radius-5 img-hover-scale">
+                                    <a href="single.html">
+                                        <img class="border-radius-5" src="/root/seo1.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="pl-10 pr-10">
+                                    <div class="post-title mb-10 text-limit-3-row">
+                                        <a href="#" class="text-c-3">10 Reasons to invest in SEO copywriting services</a>
+                                    </div>
+                                    <div class="">
+                                        <p class="post-exerpt text-c-2 text-limit-3-row">Agency life. We’ve all seen the photos posted on social media – the cool....</p>
+                                    </div>
+                                    <div>
+                                        <a href="single.html" class="read-more">Xem thêm</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="col-lg-4 wow fadeIn   animated" style="visibility: visible; animation-name: fadeIn;">
+                            <div class="border-radius-10 p-0 mb-30">
+                                <div class="post-thumb d-flex mb-15 border-radius-5 img-hover-scale">
+                                    <a href="single.html">
+                                        <img class="border-radius-5" src="/root/seo1.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="pl-10 pr-10">
+                                    <div class="post-title mb-10 text-limit-3-row">
+                                        <a href="#" class="text-c-3">10 Reasons to invest in SEO copywriting services</a>
+                                    </div>
+                                    <div class="">
+                                        <p class="post-exerpt text-c-2 text-limit-3-row">Agency life. We’ve all seen the photos posted on social media – the cool....</p>
+                                    </div>
+                                    <div>
+                                        <a href="single.html" class="read-more">Xem thêm</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
 
                 </div>
             </div>
@@ -141,9 +202,9 @@
                             <img class="border-radius-15" src="~/root/pill-emoji-clipart-md.png" width="50" height="50" alt="">
                         </a>
                     </div>
-                    <div>
+                    <div class="desc-title">
                         <h5 class="post-title mb-15 text-center">
-                            <a href="single.html">Thuốc</a>
+                            Thuốc
                         </h5>
                         <div class="meta-1 color-grey mb-10 text-center">
                             <span class="post-by">Cung cấp thuốc chất lượng, an toàn và phù hợp</span>
@@ -158,9 +219,9 @@
                             <img class="border-radius-15" src="~/root/imagesgen.png" width="50" height="50" alt="">
                         </a>
                     </div>
-                    <div>
+                    <div class="desc-title">
                         <h5 class="post-title mb-15 text-center">
-                            <a href="single.html">Khám tổng quát</a>
+                            Khám tổng quát
                         </h5>
                         <div class="meta-1 color-grey mb-10 text-center">
                             <span class="post-by">Tầm soát sức khỏe toàn diện, phát hiện sớm nguy cơ bệnh lý</span>
@@ -175,9 +236,9 @@
                             <img class="border-radius-15" src="~/root/imagesgen.png" width="50" height="50" alt="">
                         </a>
                     </div>
-                    <div>
+                    <div class="desc-title">
                         <h5 class="post-title mb-15 text-center">
-                            <a href="single.html">Thuốc</a>
+                            Thuốc
                         </h5>
                         <div class="meta-1 color-grey mb-10 text-center">
                             <span class="post-by">Cung cấp thuốc chất lượng, an toàn và phù hợp</span>
@@ -261,7 +322,7 @@
 </div>
 
 <!-- Câu chuyện của khách hàng -->
-<div class="message-client">
+<div class="message-client hide-on-mobile">
     <div class="container px-30 py-2 container-mobile">
         <div class="archive-header text-center mb-30 mt-10">
             <div class="container">
@@ -371,7 +432,7 @@
                 </div>
             </div>
             <div class="row mt-30">
-                <div class="col-lg-4">
+                <div class="col-lg-4 hide-on-mobile">
                     <article class="col-lg-12 wow fadeIn  animated" style="visibility: visible; animation-name: fadeIn;">
                         <div class="border-radius-10 p-0 mb-30">
                             <div class="post-thumb d-flex mb-15 border-radius-5 img-hover-scale">
